@@ -1,3 +1,12 @@
+2018-09-20  Jer Noble  <jer.noble@apple.com>
+
+        Enable Modern EME by default
+        https://bugs.webkit.org/show_bug.cgi?id=189794
+
+        Reviewed by Jon Lee.
+
+        * Shared/WebPreferences.yaml:
+
 2018-09-20  Thibault Saunier  <tsaunier@igalia.com>
 
         [GTK][WPE] Make sure MediaDeviceEnabled and PeerConnectionEnabled are always synced with enable-media-stream
